--- a/index.html
+++ b/index.html
@@ -1,8 +1,36 @@
-# AtCoder 環境
-[AtCoder](https://atcoder.jp/) のツール
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="utf-8">
+    <title>競技プログラミングライブラリ</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <h1>競技プログラミングライブラリ</h1>
+        <nav id="menubar">
+            <ul>
+            <li><a href="#input">input</a></li>
+            <li><a href="#company">Company</a></li>
+            <li><a href="#service">Service</a></li>
+            <li><a href="#contact">Contact</a></li>
+            </ul>
+            </nav>
+    </header>
+    <main>
+        <section id="input">
+<h2>
+    input
+</h2>
+        </section>
 
 
-## Requirements
-[online-judge-tools](./lib/Lib_0_LIB.py)
 
+    </main>
+    <footer>
 
+    </footer>
+</html>
