--- a/index.html
+++ b/index.html
@@ -21,16 +21,6 @@
             </nav>
     </header>
     <main>
-        <section id="input">
-<h2>
-    input
-</h2>
-        </section>
-
-
-
+        <section id="input"><h2>input</h2></section>
     </main>
-    <footer>
-
-    </footer>
 </html>
