--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
     </header>
     <main>
         <section id="input"><h2>input</h2></section>
+            <ul>
+                <li>
+                    aiueo
+                </li>
+            </ul>
     </main>
 </html>
