--- a/index.html
+++ b/index.html
@@ -663,5 +663,6 @@
             </ul>
         </section>
     
+<div id="pagetop"><a href="#top"><i class="fas fa-angle-up"></i></a></div>
 </main>
 </html>
