--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
     <h1>競技プログラミングライブラリ</h1>
     <nav id="menubar">
-        <ul>
+        <ul id="tag">
             
             <li><a href="#A">一般アルゴリズム</a></li>
             
